Fix lecturer screen content overflow

--- a/client/src/components/CreateGame/Lecturer/Lecturer.css
+++ b/client/src/components/CreateGame/Lecturer/Lecturer.css
@@ -3,6 +3,13 @@
     src: url("../../../fonts/CherryBombOne-Regular.ttf");
 }
 
+.lecturer-container {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
 .lecturer-header {
     height: 100px;
     background-color: #00a6d6;
